minor fix in endGame() method